# orbit-wars

./: .gitignore  README.md  agents.py  build_dataset.py  dataset_config.yaml  dataset_schema.json  ddpm_act.py  download_episodes.py  generate_parquet_db.py  getting-started.ipynb  main.py  orbit-wars-build-a-parquet-db-from-raw-replays.ipynb  orbit_train.yaml  pack.py  plot_loss.py  pyproject.toml  requirements.txt  run_harness.py  serve_orbit.py  smoke_test.py  test_correction.py  train_orbit.py  utils.py
orbit-wars-data/: agents.md  main.py
src/methods/: __init__.py  base.py  ddpm.py
src/model/: blocks.py
